# ChatService

./: CMakeLists.txt  README.md  build.sh  main.cpp  mysqlcommand.md  prebuild.sh  protocol.md  rediscommand.md
config/: config.json
controller/include/: Dispatcher.h  Server.h  Session.h  SessionManager.h
controller/src/: Dispatcher.cpp  Server.cpp  Session.cpp  SessionManager.cpp
infrastructure/include/: ChatMessage.h  ConfigLoader.h  JsonHelper.h  Logger.h  MySQLClient.h  RedisClient.h
infrastructure/src/: ConfigLoader.cpp  JsonHelper.cpp  Logger.cpp  MySQLClient.cpp  RedisClient.cpp
logic/include/: ChatManager.h  UserManager.h
logic/src/: ChatManager.cpp  UserManager.cpp
